--- a/helloworld.html
+++ b/helloworld.html
@@ -8,7 +8,7 @@
 <ul>
   <li> English: Hello, world! </li>
   <li> Spanish:  Hola, mundo! </li>
-  <li> Japanese: Konnichiwa, sekai! </li>
+  <li> Japanese: Konnnddnknsichiwa, sekai! </li>
   <li> French: Bonjour, monde! </li>
   <li> Kinyarwanda: Mwirwe, isi! </li>
 </ul>
